# amazon-chime-sma-bridging

./: .gitignore  .projenrc.js  .projenrc.ts  README.md  cdk.json  deploy.sh  package.json
.projen/: deps.json  tasks.json
create_wavs/: pyproject.toml
create_wavs/create_wavs/: create_wavs.py
lib/: amazon-chime-sma-bridging-stack.ts
src/: amazon-chime-sma-bridging.ts  createChimeResources.py  createWav.py  database.ts  emulatorSMA.js  inboundSMA.js  index.ts  pstnAudio.ts  storage.ts
src/resources/emulatorSMA/: emulatorSMA.js
src/resources/inboundSMA/: inboundSMA.js
test/: main.test.ts
test/__snapshots__/: main.test.ts.snap
utils/: createWav.py
